# Dodona

./: .gitignore  README.md  app.py  openapi.py  pyproject.toml  record_audio.py  utils.py
audio/: DonQuijote.m4a  Willink.m4a  Yeats.m4a
